# shtocks

./: README.md  pyproject.toml
shtocks/: main.py
